--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "slim/slim": "^3.0",
-        "pitmanware/kentron": "^1.3"
+        "slim/slim": "^4.0",
+        "pitmanware/kentron": "2.x-dev"
     },
     "repositories": [
         {
