--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=7.2.0",
         "slim/slim": "^4.0",
-        "pitmanware/kentron": "2.0"
+        "pitmanware/kentron": "^2.0"
     },
     "autoload": {
         "psr-4" : {
