--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pitmanware/kentron-slim",
-    "version": "2.0.1",
+    "version": "3.0",
     "description": "Slim wrapper for Kentron",
     "license": "MIT",
     "minimum-stability": "stable",
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0",
+        "php": "^8.0",
         "slim/slim": "^4.0",
-        "pitmanware/kentron": "^2.0"
+        "pitmanware/kentron": "^3.0"
     },
     "autoload": {
         "psr-4" : {
